# nrf52_devkit

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: nrf52dk_nrf52832.overlay
include/: button_handler.h  common.h  led_handler.h  sensor_task.h  uart_task.h
src/: button_handler.c  led_handler.c  main.c  sensor_task.c  uart_task.c
